2007-12-26  Douglas S. Blank  <dblank@cs.brynmawr.edu>
	* src/DataViews/_MyGrampsView.py: added tooltips, cleanup, menu work
	* src/plugins/DefaultGadgets.py: fine tuning
	* src/glade/gramps.glade: added tooltips

2007-12-26  Douglas S. Blank  <dblank@cs.brynmawr.edu>
	* src/DataViews/_MyGrampsView.py: saves on quit only, load/save api

2007-12-26  Douglas S. Blank  <dblank@cs.brynmawr.edu>
	* src/ViewManager.py: added __delete_pages called on quit
	* src/PageView.py: added on_delete method called on quit

2007-12-24  Brian Matherly <brian@gramps-project.org>
	* src/const.py.in: Move the entire Gramps dir under "Application Data" in 
	Windows.

2007-12-24  Brian Matherly <brian@gramps-project.org>
	* src/Config/_GrampsConfigKeys.py: Fix database dir under windows.

2007-12-24  Brian Matherly <brian@gramps-project.org>
	* src/ReportBase/_GraphvizReportDialog.py: Fix default font.

2007-12-24  Stéphane Charette  <stephanecharette@gmail.com>
	* src/ReportBase/_GraphvizReportDialog.py: more generic changes
	to the new GraphViz base class

2007-12-24  Douglas S. Blank  <dblank@cs.brynmawr.edu>
	* src/DataViews/_MyGrampsView.py: new DataView for Gadgets
	* src/DataViews/__init__.py: import things from _MyGrampsView
	* src/Config/_GrampsConfigKeys.py: added data-views
	* src/glade/gramps.glade: added My Gramps Gadget gui
	* src/plugins/DefaultGadgets.py: sample gadgets

2007-12-24  Brian Matherly <brian@gramps-project.org>
	* src/ReportBase/Makefile.am: Add _DocReportDialog.py to the Makefile

2007-12-23  Brian Matherly <brian@gramps-project.org>
	* src/ReportBase/_PaperMenu.py: 0001480: custom paper size is not editable 
	for 2nd and any additional invocations of the report

2007-12-23  Brian Matherly <brian@gramps-project.org>
	* src/ReportBase/_Bibliography.py:
  	 Fix 0001393: Detailed descendant report crash on too many references.

2007-12-23 Raphael Ackermann <raphael.ackermann@gmail.com>
	* src/plugins/ExtractCity.py: Fix #0001160: Regular expressions, 